@@ -1,8 +1,9 @@
 tenace (0.10) upstream; urgency=low
 
   * Yet another GUI change, now using GtkBuilder.
-  * Port to dds 1.2.0.
-  * Use gnulib to import "nproc".
+  * Port to dds 2.0:
+    + Use gnulib to import "nproc".
+    + Use threads to parallelize parscore computation.
 
  -- Christoph Berg <myon@debian.org>  Sat, 17 Apr 2010 17:02:21 +0200
 
